--- a/android/vision-quickstart/app/src/main/res/layout/activity_still_image.xml
+++ b/android/vision-quickstart/app/src/main/res/layout/activity_still_image.xml
@@ -34,19 +34,34 @@
       android:background="#000"
       android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_margin="10dp">
+
       <TextView
+          android:id="@+id/outputChatGpt"
           android:layout_width="match_parent"
-          android:textColor="@color/white"
-          android:textStyle="bold"
           android:layout_height="wrap_content"
-          android:id="@+id/outputChatGpt" />
+          android:background="@color/white"
+          android:fontFamily="monospace"
+          android:textColor="#000000"
+          android:textStyle="bold" />
+
+    </ScrollView>
+
+
 
     <Button
         android:id="@+id/select_image_button"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
+        android:fontFamily="monospace"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/black"
         android:layout_margin="12dp"
+        android:background="@drawable/add"
         android:text="@string/select_image"/>
 
     <LinearLayout
