--- a/android/vision-quickstart/app/src/main/res/layout/activity_vision_entry_choice.xml
+++ b/android/vision-quickstart/app/src/main/res/layout/activity_vision_entry_choice.xml
@@ -1,31 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="16dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+  android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
-        android:background="@drawable/list_item_background"
         android:id="@+id/java_entry_point"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
         android:layout_margin="@dimen/activity_vertical_margin"
+        android:background="@drawable/add"
+        android:fontFamily="monospace"
         android:padding="20dp"
         android:text="@string/java_entry_title"
-        android:textSize="26sp" />
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="35dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:srcCompat="@drawable/werd" />
 
     <TextView
-        android:background="@drawable/list_item_background"
         android:id="@+id/kotlin_entry_point"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_margin="@dimen/activity_vertical_margin"
+
+        android:layout_marginBottom="16dp"
+
+        android:background="@drawable/add"
+        android:fontFamily="monospace"
         android:padding="20dp"
-        android:text="@string/kotlin_entry_title"
-        android:textSize="26sp" />
-</LinearLayout>
+        android:text="Continue"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="400dp"
+
+        android:layout_height="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/screenshot_2023_11_04_at_5_02_17pm" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Text"
+        android:textColor="@color/black"
+        android:fontFamily="@font/yeon"
+        android:gravity="center"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/kotlin_entry_point"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
