--- a/android/vision-quickstart/app/src/main/res/values/colors.xml
+++ b/android/vision-quickstart/app/src/main/res/values/colors.xml
@@ -11,4 +11,11 @@
     <color name="white">#FFFFFF</color>
     <color name="blue">#4286f4</color>
     <color name="red">#f44242</color>
+
+    <color name="black">#FF000000</color>
+
+    <color name="textcolor">#1fc57a</color>
+    <color name="startcolor">#1fc57a</color>
+    <color name="endcolor">#53e88b</color>
+    <color name="iconcolor">#fead1d</color>
 </resources>
